# datagnome-speedo

./: .env.example  .gitignore  AGENTS.md  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml
backend/: Cargo.toml
backend/migrations/: 20250210000000_create_newsletter_config_and_run_log.sql  20250211000000_add_approved_users.sql
backend/src/: auth.rs  db.rs  email.rs  main.rs  models.rs  openclaw_client.rs  scheduler.rs  supabase.rs
backend/src/routes/: health.rs  mod.rs  newsletters.rs
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/public/: site.webmanifest
frontend/src/: App.css  App.tsx  types.ts
frontend/src/components/: AuthGate.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: Dashboard.tsx  EditNewsletter.tsx
