[package]
name = "speedo-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
jsonwebtoken = "9"
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
lettre = { version = "0.10", features = ["tokio1-native-tls"] }
rocket_cors = "0.6"
